--- a/Src/HomeScreen.fx.yaml
+++ b/Src/HomeScreen.fx.yaml
@@ -47,7 +47,7 @@ HomeScreen As screen:
             PaddingLeft: =0
             PaddingRight: =0
             PaddingTop: =0
-            Text: =ThisItem.新しい列
+            Text: =ThisItem.TASKNAME
             VerticalAlign: =VerticalAlign.Top
             Width: =Parent.TemplateWidth - 86
             X: =16
@@ -62,7 +62,7 @@ HomeScreen As screen:
             PaddingLeft: =0
             PaddingRight: =0
             PaddingTop: =0
-            Text: =ThisItem.作成日
+            Text: =ThisItem.TASKDESCRIPTION
             VerticalAlign: =VerticalAlign.Top
             Width: =Title3.Width
             X: =Title3.X
@@ -77,7 +77,7 @@ HomeScreen As screen:
             PaddingLeft: =0
             PaddingRight: =0
             PaddingTop: =0
-            Text: =ThisItem.USERID
+            Text: =ThisItem.DATE
             VerticalAlign: =VerticalAlign.Top
             Width: =Title3.Width
             X: =Title3.X
