--- a/CanvasManifest.json
+++ b/CanvasManifest.json
@@ -142,6 +142,8 @@
     "TaskEditScreen",
     "ChatScreen",
     "RateScreen",
-    "TaskScreen"
+    "TaskScreen",
+    "SettingScreen",
+    "Screen1"
   ]
 }
