--- a/Src/RateScreen.fx.yaml
+++ b/Src/RateScreen.fx.yaml
@@ -1,2 +1,8 @@
 RateScreen As screen:
+    Fill: =RGBA(240,239,228,1)
+
+    Icon10 As icon.ArrowLeft:
+        Icon: =Icon.ArrowLeft
+        OnSelect: =Back()
+        ZIndex: =1
 
