--- a/Src/ParentScreen.fx.yaml
+++ b/Src/ParentScreen.fx.yaml
@@ -1,32 +1,25 @@
-HomeScreen As screen:
+ParentScreen As screen:
     Fill: =RGBA(240,239,228,1)
 
-    "HomeScreenGallery As gallery.'BrowseLayout_Vertical_ThreeTextVariant_ver5.0'":
+    "ParentScreenGallery As gallery.'BrowseLayout_Vertical_OneTextVariant_ver5.0'":
         DelayItemLoading: =true
-        Height: =1066
+        Height: =943
         Items: |-
-            =Sort(
-                Filter(
-                    B_TASK,
-                    USERID = user_id,
-                    FLAG = 0,
-                    DATE = Today()
-                ),
-                DATE
+            =Filter(
+                B_USER,
+                PARENTID = user_id
             )
         Layout: =Layout.Vertical
         LoadingSpinner: =LoadingSpinner.Data
         OnSelect: |-
-            =Set(
-                task_id,
-                HomeScreenGallery.Selected.B_TASK
-            );
-            Navigate(OneTaskShowScreen, ScreenTransition.None);
+            =Navigate(ChatScreen, ScreenTransition.None);
+            Set(send_id, Int(ParentScreenGallery.Selected.USERID));
         TemplatePadding: =0
-        TemplateSize: =116
+        TemplateSize: =80
+        Y: =92
         ZIndex: =1
 
-        Title3 As label:
+        Title4 As label:
             FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
             Height: =Self.Size * 1.8
             OnSelect: =Select(Parent)
@@ -34,74 +27,52 @@ HomeScreen As screen:
             PaddingLeft: =0
             PaddingRight: =0
             PaddingTop: =0
-            Text: =ThisItem.TASKNAME
+            Text: =ThisItem.USERNAME
             VerticalAlign: =VerticalAlign.Top
             Width: =Parent.TemplateWidth - 86
             X: =16
-            Y: =(Parent.TemplateHeight - (Self.Size*1.8 + Subtitle3.Size*1.8 + 2 + Body1.Size*1.8)) / 2
+            Y: =(Parent.TemplateHeight / 2) - (Self.Height / 2)
             ZIndex: =1
 
-        Subtitle3 As label:
-            FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-            Height: =Self.Size * 1.8
-            OnSelect: =Select(Parent)
-            PaddingBottom: =0
-            PaddingLeft: =0
-            PaddingRight: =0
-            PaddingTop: =0
-            Text: =ThisItem.TASKDESCRIPTION
-            VerticalAlign: =VerticalAlign.Top
-            Width: =Title3.Width
-            X: =Title3.X
-            Y: =Title3.Y + Title3.Height
-            ZIndex: =2
-
-        Body1 As label:
-            FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-            Height: =Self.Size * 1.8
-            OnSelect: =Select(Parent)
-            PaddingBottom: =0
-            PaddingLeft: =0
-            PaddingRight: =0
-            PaddingTop: =0
-            Text: =Concatenate("締め切り：", Year(ThisItem.DATE), "年", Month(ThisItem.DATE), "月", Day(ThisItem.DATE), "日")
-            VerticalAlign: =VerticalAlign.Top
-            Width: =Title3.Width
-            X: =Title3.X
-            Y: =Subtitle3.Y + Subtitle3.Height
-            ZIndex: =3
-
-        NextArrow3 As icon.ChevronRight:
+        NextArrow4 As icon.ChevronRight:
             AccessibleLabel: =Self.Tooltip
             Color: =RGBA(166, 166, 166, 1)
             Height: =50
             Icon: =Icon.ChevronRight
             OnSelect: =Select(Parent)
-            PaddingBottom: =16
-            PaddingLeft: =16
-            PaddingRight: =16
-            PaddingTop: =16
+            PaddingBottom: =12
+            PaddingLeft: =12
+            PaddingRight: =12
+            PaddingTop: =12
             Tooltip: ="項目の詳細の表示"
             Width: =50
             X: =Parent.TemplateWidth - Self.Width - 12
             Y: =(Parent.TemplateHeight / 2) - (Self.Height / 2)
-            ZIndex: =4
+            ZIndex: =2
 
-        Separator3 As rectangle:
+        Separator4 As rectangle:
             Height: =8
             OnSelect: =Select(Parent)
             Width: =Parent.TemplateWidth
             Y: =Parent.TemplateHeight - Self.Height
-            ZIndex: =5
+            ZIndex: =3
 
-        Rectangle4 As rectangle:
-            Height: =Parent.TemplateHeight - Separator3.Height
+        Rectangle3 As rectangle:
+            Height: =Parent.TemplateHeight - Separator4.Height
             OnSelect: =Select(Parent)
             Visible: =ThisItem.IsSelected
             Width: =4
-            ZIndex: =6
+            ZIndex: =4
 
-    HomeScreenHomeIcon As icon.Home:
+    ParentScreenLabel As label:
+        Height: =70
+        Size: =21
+        Text: ="保護者と結びついている子どもの一覧"
+        Width: =560
+        Y: =5
+        ZIndex: =2
+
+    HomeScreenHomeIcon_2 As icon.Home:
         Icon: =Icon.Home
         OnSelect: |-
             =If(
@@ -111,9 +82,9 @@ HomeScreen As screen:
             );
         X: =300
         Y: =1066
-        ZIndex: =6
+        ZIndex: =3
 
-    HomeScreenTaskIcon As icon.Note:
+    HomeScreenTaskIcon_2 As icon.Note:
         Icon: =Icon.Note
         OnSelect: |-
             =If(
@@ -123,23 +94,28 @@ HomeScreen As screen:
             );
         X: =193
         Y: =1066
-        ZIndex: =7
+        ZIndex: =4
 
-    HomeScreenSettingsIcon As icon.Settings:
+    HomeScreenSettingsIcon_2 As icon.Settings:
         Icon: =Icon.Settings
         OnSelect: =Navigate(SettingScreen, ScreenTransition.None);
         X: =488
         Y: =1066
-        ZIndex: =8
+        ZIndex: =5
 
-    HomeScreenProgressIcon As icon.Trending:
+    HomeScreenProgressIcon_2 As icon.Trending:
         Icon: =Icon.Trending
-        OnSelect: =Navigate(RateScreen, ScreenTransition.None);
+        OnSelect: |-
+            =If(
+                is_parent,
+                Notify("保護者アカウントではこの機能は無効化されています。",NotificationType.Error),
+                Navigate(RateScreen, ScreenTransition.None)
+            );
         X: =408
         Y: =1072
-        ZIndex: =9
+        ZIndex: =6
 
-    HomeScreenMailIcon As icon.Mail:
+    HomeScreenMailIcon_2 As icon.Mail:
         Icon: =Icon.Mail
         OnSelect: |
             =Refresh(B_USER);
@@ -163,9 +139,9 @@ HomeScreen As screen:
             );
         X: =108
         Y: =1066
-        ZIndex: =10
+        ZIndex: =7
 
-    HomeScreenLogoutIcon As icon.Lock:
+    HomeScreenLogoutIcon_2 As icon.Lock:
         Icon: =Icon.Lock
         OnSelect: |-
             =Set(
@@ -175,9 +151,9 @@ HomeScreen As screen:
             Navigate(LoginScreen, ScreenTransition.None);
         X: =25
         Y: =1066
-        ZIndex: =11
+        ZIndex: =8
 
-    Icon4 As icon.Reset:
+    Icon4_1 As icon.Reset:
         Icon: =Icon.Reset
         OnSelect: |-
             =Refresh(B_CHAT);
@@ -187,5 +163,5 @@ HomeScreen As screen:
             Refresh(B_USER);
         X: =576
         Y: =1072
-        ZIndex: =12
+        ZIndex: =9
 
