--- a/Src/HomeScreen.fx.yaml
+++ b/Src/HomeScreen.fx.yaml
@@ -119,7 +119,7 @@ HomeScreen As screen:
             =If(
                 is_parent,
                 Notify("保護者アカウントではこの機能は無効化されています。",NotificationType.Error),
-                Navigate(HomeScreen, ScreenTransition.None)
+                Navigate(TaskScreen, ScreenTransition.None)
             );
         X: =193
         Y: =1066
